- brightens homepage hero image - fix for wrapping article content on contracts page

--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -797,6 +797,7 @@
 
     article dl {
         margin-bottom: 2em;
+        width: 100%;
     }
 
     dt, dd {
